# GPTQModel

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CREDITS.md  LICENSE  MANIFEST.in  README.md  auto_switch_cuda_toolkit.sh  eora_bug.py  eora_lm_eval.py  eora_load_and_infer.py  eora_no_bug.py  example.py  fp16_lm_eval.sh  install.sh  llama.py  model_test.py  package-lock.json  plan.md  pyproject.toml  quantization_protocol.md  requirements.txt  setup.py  sync_cuda_toolkit_with_torch.sh  test.py  test_minimax_m2_hf.py  test_patch.py  test_prepare_dataset.py  upload_model.py
.buildkite/: release.sh  unit_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: allocate_gpu.py  blacklist.yaml  build_unit_test_env_matrix.py  ci_catalog.py  ci_common.py  ci_deps.py  ci_gpu.py  ci_install_modelcloud_git_deps.sh  ci_loop_versions.py  ci_prepare_checkout.sh  ci_release_build_sdist.sh  ci_release_check_dist.sh  ci_release_test_install.sh  ci_release_upload_local.sh  ci_release_wait_for_confirmation.sh  ci_restore_uv_cache.sh  ci_tests.py  ci_unit_activate_uv_env.sh  ci_unit_setup_uv_env.sh  ci_workflow.py  ci_write_runner_outputs.sh  deps.yaml  deps_utils.py  generate_release_matrix.py  get_unit_test_env_name.py  has_specific_deps.py  install_deps.py  list_test_files.py  parse_test_config.py  print_env_rows.py  release_gpu.py  release_map.py  run_tests.py  test.yaml  uninstall_deps.py
.github/workflows/: build_wheels_cuda_linux.yml  build_wheels_pypi_linux.yml  code_quality.yml  compatibility.yml  release.yml  run_tests.yml  run_tests_2.yml  setuptools_compatibility_reusable.yml  test_quality.yml  unit_tests.yml  unit_tests_reusable.yml
auto_gptq/modeling/: _base.py
auto_gptq_next/: __init__.py
auto_gptq_next/models/: __init__.py  _base.py  _utils.py  auto.py  baichuan.py  base.py  bloom.py  chatglm.py  codegen.py  cohere.py  decilm.py  gemma.py  gpt2.py  gpt_bigcode.py  gpt_neox.py  gptj.py  internlm.py  llama.py  longllama.py  mistral.py  mixtral.py  moss.py  mpt.py  opt.py  phi.py  qwen.py  qwen2.py  rw.py  stablelmepoch.py  starcoder2.py  xverse.py  yi.py
auto_gptq_next/nn_modules/: LICENSE
auto_gptq_next/quantization/: __init__.py  config.py  gptq.py  quantizer.py
auto_gptq_next/utils/: import_utils.py  importer.py  marlin.py  model.py  perplexity.py
benchmarks/: benchmark_glm4_moe_quantize.py
causal_conv1d/: __init__.py  causal_conv1d_interface.py
chat/: README.md  chat.py  run.sh
design/: arch.md
docs/: INSTALLATION.md  NEWS_OR_UPDATE.md  paroquant.md  torch_fused_int4_transformations.md
docs/eora/: README.md  eora_calibration_data_construction.py  eora_generation.py  post_quant_eora_generation.py
docs/tutorial/: 01-Quick-Start.md  02-Advanced-Model-Loading-and-Best-Practice.md
examples/: README.md  tpu_smi.py
examples/benchmark/: generation_speed.py  ipex.py  perplexity.py  prompts.json  prompts.jsonl  run.sh  test_format_speed.py
examples/eora/: README.md  benchmark_fullprecision.sh  benchmark_speed.sh  eora_benchmark_speed.py  eora_calibration_data_construction.py  eora_generation.py  eora_load_and_inference.py  evaluation.py  post_quant_eora_generation.py  run_llama3.1_1b.sh  run_llama3.1_8b.sh  run_llama3.2_3b.sh  run_llama3_70b.sh  test_fp_model.py
examples/evaluation/: run_language_modeling_task.py  run_sequence_classification_task.py  run_text_summarization_task.py
examples/inference/: run_transformers.py  run_with_different_backends.py
examples/quantization/: basic_usage.py  basic_usage_autoround.py  basic_usage_backend.py  basic_usage_backend_inference.py  basic_usage_bitblas.py  basic_usage_exllama.py  basic_usage_gpt_xl.py  basic_usage_marlin.py  basic_usage_qbits.py  basic_usage_sglang.py  basic_usage_triton.py  basic_usage_vllm.py  (+3 more)
format/: format.sh  ruff.toml
gptqmodel/: __init__.py  _banner.py  extension.py  test.py  version.py
gptqmodel_ext/: LICENSE  __init__.py  floatx_cpu.cpp  pack_block_cpu.cpp
hw/: a100.md  ascend_npu.md
scripts/: arch.md  benchmark_awq_cuda_fp32_reduce_ab.py  benchmark_awq_fused_reduce_ab.py  benchmark_awq_triton_fp32_ab.py  benchmark_gguf_autotune_ab.py  benchmark_gguf_cpp_vs_torch.py  benchmark_gguf_dequant.py  benchmark_gguf_fused_ab.py  benchmark_llama3_2_paged_attention.py  benchmark_llama_cpp_vs_gptqmodel_gguf.py  benchmark_marlin_a100.py  benchmark_mentaray_ab.py  benchmark_paroquant_official_vs_local.py  benchmark_paroquant_opt_scope_compare.py  benchmark_paroquant_opt_unit_compare.py  benchmark_paroquant_optimizer_real_workload.py  benchmark_paroquant_pair_cache_real_workload.py  benchmark_paroquant_rotation_ab.py  benchmark_paroquant_rotation_cache_ab.py  benchmark_paroquant_runtime_cache_ab.py  benchmark_paroquant_triton_ab.py  benchmark_qwen35_moe_ab.py  dequantize_fp8_model.py  dequantize_model.py  eval_model.py  generate_exl3_kernel_map_packed.py  paroquant_first_layer_ab.py  paroquant_module_set_scan.py  paroquant_single_module_scan.py  profile_paroquant_runtime_cache_case.py  repro_cusolver_generated_gptq.py  repro_cusolver_threadx_warmup.py  repro_issue_2326.py  sync_cuda_toolkit_with_torch.sh  test.py
tests/: __init__.py  allocator_bench.py  awq_test_utils.py  base_test.py  conftest.py  eval.py  inference_speed.py  model_test.py  olora_finetuning.py  pytest.ini  tes_batch_h.py  test_ParoQuant.py  test_adapter_config.py  test_ascend_npu_quant_linear.py  test_asym_gptq_v1.py  test_attn_mask.py  test_auto_adapter_generate.py  test_auto_detect_module_tree.py  test_auto_module_decoder.py  test_awq.py  test_awq_bitblas.py  test_awq_clip_consistency.py  test_awq_extension_loader.py  test_awq_failsafe.py  test_awq_fp16_matmul_heuristic.py  test_awq_gemm.py  test_awq_gemv.py  test_awq_gemv_fast.py  test_awq_gemv_fast_jit.py  test_awq_glm4_layer_mapping.py  test_awq_inference_llm_awq.py  test_awq_inference_mistral.py  test_awq_input_activations.py  test_awq_jit_include_paths.py  test_awq_layout_conversion.py  test_awq_llm_awq.py  test_awq_loader_dtype.py  test_awq_marlin.py  test_awq_moe.py  test_awq_rotary_device.py  (+302 more)
(+1084 files in other folders)
